--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -7,10 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3    # clone the codes in the virtual machine
       - name: echo string
         run: echo "Hello World"
       - name: multi string
         run: |
           node -v
           npm -v
+      - name: python command
+        run: |
+          import platform
+          print(platform.processor())
+          shell: python
