--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,25 +1,25 @@
-name: "Terraform"
+name: Terraform
 
 on: [push]     # list
 
 jobs:
   terraform:
-  runs-on: ubuntu-latest   # runner
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v3   # clone the code in VM
-    - name: Setup terraform
-      uses: hashicorps/setup-terraform@v2  # action
-      with:
-        terraform_version: 1.1.9
-    - name: terraform init
-      run: terraform init
-    - name: validate
-      run: terraform validate
-    - name: format
-      run: terraform fmt -check
-    - name: plan
-      run: terraform plan
+    runs-on: ubuntu-latest   
+    steps:
+     - name: Checkout
+       uses: actions/checkout@v3   # clone the code in VM
+     - name: Setup terraform
+       uses: hashicorps/setup-terraform@v2  # action
+       with:
+         terraform_version: 1.1.9
+     - name: terraform init
+       run: terraform init
+     - name: validate
+       run: terraform validate
+     - name: format
+       run: terraform fmt -check
+     - name: plan
+       run: terraform plan
 
 
     
